# siras

./: Cargo.toml  README.md  clippy.toml
examples/: bessel.rs  butter.rs  chebyshev1.rs  chebyshev2.rs  fft.rs
siras/: Cargo.toml
siras/benches/: fft_benchmark.rs
siras/examples/: bessel.rs  butter.rs  chebyshev1.rs  chebyshev2.rs  fft.rs
siras/src/: fft.rs  filter_design.rs  lib.rs  lti.rs  lti_conversion.rs  math.rs  signal_extension.rs
src/: fft.rs  filter_design.rs  lib.rs  lti.rs  signal_extension.rs  signal_generator.rs  transfer_function.rs
